Added apikey variable to js & added ul for cityList

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </h2>
                 <br>
                 <!--Form to capture user input-->
-                <form class="input-group">
+                <form class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="City Name.." id="search-input">
                     <div class="input-group-append">
                         <!--Submit button that can take click or enter-->
@@ -37,6 +37,9 @@
                         </button>
                     </div>
                 </form>
+                <ul class="list-group" id="cityList">
+                    <!--Cities entered by user will be gathered from local storage and placed here-->
+                </ul>
 
                 <!--Begin with search box-->
                 <!--Cities stored in bootstrap list group-->
