entered searches now appear as list item

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </button>
                     </div>
                 </form>
-                <ul class="list-group" id="cityList">
+                <ul class="list-group mb-3" id="cityList">
                     <!--Cities entered by user will be gathered from local storage and placed here-->
                 </ul>
 
