layout of page completed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
             </div>
             <!--Where the weather data goes-->
             <div class="col-md-9">
-                <!--Weather data loads in this box-->
+                <div class="card" id="top-card">
+                    <!--Top weather card goes here-->
+                </div>
+                <h2 id="five-day">
+                    <!--5 Day Title goes here-->
+                </h2>
+                <div class="row" id="day-holder">
+                    <!--Holds cards showing forecast days-->
+                </div>
             </div>
         </div>
     </div>
