--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <!--Where the weather data goes-->
             <div class="col-md-9">
-                <div class="card" id="top-card">
+                <div class="card m-3" id="top-card">
                     <!--Top weather card goes here-->
                 </div>
                 <h2 id="five-day">
