Added clear button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                         </button>
                     </div>
                 </form>
+                <button class="btn btn-primary mb-3" id="clear-button">
+                    Clear History
+                </button>
                 <ul class="list-group mb-3" id="cityList">
                     <!--Cities entered by user will be gathered from local storage and placed here-->
                 </ul>
