--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         </button>
                     </div>
                 </form>
+                <!--Button to clear history from local storage-->
                 <button class="btn btn-primary mb-3" id="clear-button">
                     Clear History
                 </button>
